# BeAnimal

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: pages.yml  release.yml
beanimal/: __init__.py  animals.py  cli.py  filter.py
tests/: test_filter.py
web/: index.html  package-lock.json  package.json
web/src/: main.js  styles.css
