[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beanimal"
version = "0.1.0"
description = "Real-time webcam animal filter recorder"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "opencv-python>=4.9",
  "numpy>=1.26",
]

[project.scripts]
beanimal = "beanimal.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["beanimal*"]
